<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".login.Fragment_SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/backToLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            android:onClick="onClick"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/page_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/register_new_user" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/background_white_round_edge"
            android:padding="10dp"
            android:layout_marginEnd="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            />

        <EditText
            android:id="@+id/pass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_white_round_edge"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/email_editText"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:inputType="textPassword"
            android:maxEms="32"
            android:minEms="10" />

        <EditText
            android:id="@+id/conf_pass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_editText"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_white_round_edge"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirm_password"
            android:autofillHints="@string/confirm_password"
            android:inputType="textPassword"
            android:maxEms="32"
            android:minEms="10" />

        <TextView
            android:id="@+id/we_send_hint"
            android:textColor="@color/black"
            android:layout_below="@id/conf_pass_editText"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:text="@string/your_password_should_be_minimum_10_characters_with_one_upper_case_numbers_and_special_chars_i_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <CheckBox
            android:id="@+id/checkbox_register"
            android:checked="false"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/checkBox_info_text"
            android:text="@string/i_agree_to"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/checkbox_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/checkBox_info_text1"
            android:text="@string/terms_and_cond"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/checkBox_info_text"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/checkBox_info_text2"
            android:text="@string/and"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/checkBox_info_text1"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/checkBox_info_text3"
            android:text="@string/privacy_poli"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/checkBox_info_text2"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/sendConfButton"
            android:text="@string/Continue"
            android:layout_below="@id/checkBox_info_text3"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_marginStart="100dp"
            android:onClick="onClick"
            android:layout_marginEnd="100dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/have_no_acc_text1"
            android:textAllCaps="false"
            android:text="@string/have_an_account"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/have_no_acc_text2"
            android:textAlignment="center"
            android:text="@string/sign_in"
            android:textColor="@color/orange"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            android:layout_toEndOf="@id/have_no_acc_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>