<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".login.fragment_ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/backToLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            android:onClick="onClick"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/page_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/request_password" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="5">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_white_round_edge"
            android:hint="@string/email"
            android:autofillHints="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/we_send_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_editText"
            android:layout_marginTop="5dp"
            android:text="@string/we_send_password"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/sendConfButton"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>