<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <FrameLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/login_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                app:layout_constraintVertical_bias="0.3" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"

                />

            <EditText
                android:id="@+id/password"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_field"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/button_sign_login"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:background="@color/colorGray"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView_forgotpass"
                android:layout_width="162dp"
                android:layout_height="32dp"
                android:layout_below="@+id/button_sign_login"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/holo_purple"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/textView_signupButton"
                android:layout_width="162dp"
                android:layout_height="32dp"
                android:layout_below="@+id/button_sign_login"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/textView_forgotpass"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/sign_up_name"
                android:textColor="@android:color/holo_purple"
                android:textSize="15sp"/>

        </RelativeLayout>


    </FrameLayout>

</LinearLayout>