<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.example.prototype1.one_time_act.PhoneVerifyActivity">


    <FrameLayout
        android:id="@+id/phone_verify_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_name_photo"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_oneTimeProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="?actionBarSize"
                android:clickable="true"
                android:focusable="true"
                app:civ_border_color="@color/black"
                app:civ_border_width="1dp"
                android:onClick="onClick"
                android:padding="5dp"
                android:src="@mipmap/ic_launcher_round">

            </de.hdodenhof.circleimageview.CircleImageView>


            <EditText
                android:id="@+id/eText_oneTimeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_oneTimeProfile"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:autofillHints="@null"
                android:background="@drawable/background_white_round_edge"
                android:hint="@string/name_and_surname"
                android:inputType="textPersonName"
                android:maxEms="16"
                android:padding="10dp"
                android:textAlignment="center" />



            <Button
                android:id="@+id/button_oneTime_send_name_picture"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eText_oneTimeName"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:text="@string/send"
                android:textAlignment="center"
                android:visibility="visible"
                android:textAllCaps="false">
            </Button>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phone_identification_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/phone_verify_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_marginTop="1dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_verification_in_progress"
                android:textAlignment="center"
                android:visibility="visible">

            </TextView>

            <TextView
                android:id="@+id/phone_verify_status"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_verify_title"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:textAlignment="center"
                android:visibility="visible">

            </TextView>

            <ProgressBar
                android:id="@+id/progressBar_verifyPhone"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/phone_verify_status"
                android:visibility="visible"
                android:layout_marginTop="20dp"
                android:layout_width="180dp"
                android:layout_height="180dp">

            </ProgressBar>

            <EditText
                android:id="@+id/eText_oneTimePNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_centerInParent="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:autofillHints="@null"
                android:background="@drawable/background_white_round_edge"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxEms="16"
                android:padding="10dp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/button_oneTime_send_phone"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eText_oneTimePNumber"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:text="@string/send"
                android:textAlignment="center"
                android:visibility="invisible"
                android:textAllCaps="false">
            </Button>

        </RelativeLayout>


    </FrameLayout>


</LinearLayout>